# arby

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  index.html
arby/: CMakeLists.txt  Config.cmake.in
arby/include/arby/: Division.hpp  DivisionResult.hpp  Interval.hpp  Nat.hpp  Nat.hpp.orig  Public.hpp  arby.hpp  codlili.hpp  math.hpp
arby/src/: CMakeLists.txt  Nat.cpp  Private.cpp  Private.hpp  Public.cpp  arby.cpp
tests/: CMakeLists.txt  Uint.cpp  basic_arithmetic.cpp  casting.cpp  divmod.cpp  example.cpp  main.cpp  misc.cpp  multiplication.cpp  pow.cpp  self_assignment.cpp  stringification.cpp  user_defined_literals.cpp
tests/Division/: CMakeLists.txt  division.cpp
tests/DivisionResult/: CMakeLists.txt  division_result.cpp
tests/Interval/: CMakeLists.txt  interval.cpp
tests/Nat/: CMakeLists.txt  basic_arithmetic.cpp  benchmarks.cpp  bit_shifting.cpp  bitwise.cpp  casting.cpp  digits.cpp  divmod.cpp  ilog.cpp  ipow.cpp  iroot.cpp  misc.cpp  multiplication.cpp  namespaces.cpp  query_size.cpp  self_assignment.cpp  stringification.cpp  user_defined_literals.cpp
tests/math_support/: CMakeLists.txt  ilog.cpp  ipow.cpp  pow.cpp
v0.1/: annotated.html  arby_8hpp.html  arby_8hpp__incl.map  arby_8hpp__incl.md5  arby_8hpp_a3558824f9ab568f546a48db3fe28adfd_cgraph.map  arby_8hpp_a3558824f9ab568f546a48db3fe28adfd_cgraph.md5  arby_8hpp_source.html  classcom_1_1saxbophone_1_1arby_1_1Uint-members.html  classcom_1_1saxbophone_1_1arby_1_1Uint.html  classcom_1_1saxbophone_1_1arby_1_1Uint_a036dce970b7db16faa1008b20c327177_icgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_a036dce970b7db16faa1008b20c327177_icgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Uint_a5add2d6fc49b33ac1126e335aa086d90_cgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_a5add2d6fc49b33ac1126e335aa086d90_cgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Uint_a5c5a014129337c3b3e93254b35eeb21d_icgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_a5c5a014129337c3b3e93254b35eeb21d_icgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Uint_a895c21a7101792ec77e368b3ae0e0eb6_cgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_a895c21a7101792ec77e368b3ae0e0eb6_cgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Uint_a982563c97141b4325b763bfcf3604885_cgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_a982563c97141b4325b763bfcf3604885_cgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Uint_a982563c97141b4325b763bfcf3604885_icgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_a982563c97141b4325b763bfcf3604885_icgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Uint_aa3fa319c0c2ecb1a976cdabd305b8228_icgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_aa3fa319c0c2ecb1a976cdabd305b8228_icgraph.md5  classes.html  dir_000003_000001.html  dir_0b2d32abc853c329b1116f88cde00a7b.html  dir_0b2d32abc853c329b1116f88cde00a7b_dep.map  dir_145a22db3d572251be73ebbdc15237af.html  dir_1e05de7119bac800f83ab14a381e3230.html  dir_5d0364daac8968767c863dee08835b32.html  dir_5d0364daac8968767c863dee08835b32_dep.md5  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  index.html  (+1 more)
v0.2/: annotated.html  arby_8hpp.html  arby_8hpp__incl.map  arby_8hpp__incl.md5  arby_8hpp_a1ac8cc32f0232ea6725c69e014790ecd_cgraph.map  arby_8hpp_a1ac8cc32f0232ea6725c69e014790ecd_cgraph.md5  arby_8hpp_source.html  classcom_1_1saxbophone_1_1arby_1_1Uint-members.html  classcom_1_1saxbophone_1_1arby_1_1Uint.html  classcom_1_1saxbophone_1_1arby_1_1Uint_a3fad419af255867c63131978238de981_icgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_a3fad419af255867c63131978238de981_icgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Uint_a991cc2a76e45c2b2ca8250aff754ed6c_icgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_a991cc2a76e45c2b2ca8250aff754ed6c_icgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Uint_ab56ce9b2d1d111e8aaeb2df3d60a8eab_icgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_ab56ce9b2d1d111e8aaeb2df3d60a8eab_icgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Uint_ad7e0be50f7243522aae3d973ea8f642b_cgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_ad7e0be50f7243522aae3d973ea8f642b_cgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Uint_ae52ad385ec219ca3c014eb1624c64078_cgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_ae52ad385ec219ca3c014eb1624c64078_cgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Uint_ae52ad385ec219ca3c014eb1624c64078_icgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_ae52ad385ec219ca3c014eb1624c64078_icgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Uint_af3b0788315aabe7a6f8fe1c6be8dadde_cgraph.map  classcom_1_1saxbophone_1_1arby_1_1Uint_af3b0788315aabe7a6f8fe1c6be8dadde_cgraph.md5  classes.html  codlili_8hpp_source.html  dir_000003_000001.html  dir_0b2d32abc853c329b1116f88cde00a7b.html  dir_145a22db3d572251be73ebbdc15237af.html  dir_1e05de7119bac800f83ab14a381e3230.html  dir_5d0364daac8968767c863dee08835b32.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  index.html  menudata.js
v0.3/: Nat_8hpp.html  Nat_8hpp__incl.map  Nat_8hpp__incl.md5  Nat_8hpp_source.html  annotated.html  classcom_1_1saxbophone_1_1arby_1_1Nat-members.html  classcom_1_1saxbophone_1_1arby_1_1Nat.html  classcom_1_1saxbophone_1_1arby_1_1Nat_a0b1220e8ddbbb267963fb6427d572d76_icgraph.map  classcom_1_1saxbophone_1_1arby_1_1Nat_a0b1220e8ddbbb267963fb6427d572d76_icgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Nat_a8796d570d4cc2c7f1715e4996002a672_cgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Nat_abcbd4717d985047f6b45c7463671807f_cgraph.map  classcom_1_1saxbophone_1_1arby_1_1Nat_abcbd4717d985047f6b45c7463671807f_cgraph.md5  classcom_1_1saxbophone_1_1arby_1_1Nat_acc9af41b7d0444f9516d2ac4691f901a_cgraph.map  classcom_1_1saxbophone_1_1arby_1_1Nat_acc9af41b7d0444f9516d2ac4691f901a_cgraph.md5  classes.html  codlili_8hpp_source.html  dir_000003_000001.html  dir_0b2d32abc853c329b1116f88cde00a7b.html  dir_145a22db3d572251be73ebbdc15237af.html  dir_1e05de7119bac800f83ab14a381e3230.html  dir_5d0364daac8968767c863dee08835b32.html  files.html  functions.html  functions_func.html  todo.html  (+10 more)
(+203 files in other folders)
